# you-shall-not-pass

./: Home.py  README.md  crack_password.py  gradio_app.py  password_app.py  pyproject.toml  requirements.txt  talk_app.py  totally_safe_file.yaml  yaml_loader_ace.py
.github/workflows/: main.yml
.streamlit/: config.toml
code_scanners_examples/: README.md  bad_complexity.py  bad_linting.py  bad_requirements.txt  bad_security.py  bandit_report.txt
gradio_vulnerability/: README.md  gradio_app.py
pages/: 01 About us.py  01 IT Security.py  02 Coding Risks.py  02 Coding risks.py  02 IT Security.py  02 Intro.py  03 Coding risks.py  03 IT Security.py  03 Python Security Practices.py  03 Python Security practices.py  04 Coding Security.py  04 Coding risks.py  04 Python Security practices.py  04 Thank You.py  04 Thank you.py  05 Coding Security.py  05 Python Security.py  06 Python Security practices.py  07 scan code.py  09 stay informed.py  50 Gradio.py  99 Exploits.py  notes.txt  source.txt
pages/scripts/: utils.py
yaml_loader_ace/: pyproject.toml  readme.txt  totally_safe_file.yaml  yaml_load_ace.py
