[tool.poetry]
name = "you-shall-not-pass"
version = "0.1.0"
description = "Package for PyConDE2024 presentation"
authors = ["Antonia Scherz, Roman Krafft"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
gradio = "4.10.0"
streamlit-code-editor = "^0.1.12"
streamlit-ace = "^0.1.1"
pyyaml = "5.3"
flask = "^3.0.3"
pylint = "^3.1.0"
radon = "^6.0.1"
safety = "^3.1.0"
tk = "^0.1.0"
pip-tools = "^7.4.1"
pip-audit = "2.7.2"
bandit = "1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
